pkgs/ndarray/hook/custom_ufuncs.h

/* ============================================================================
 * SECTION 1: CORE COMPLEX TYPE DEFINITIONS
 * ============================================================================
 * Binary-compatible complex number structures matching kiss_fft_cpx
 * and mapped directly to ndarray's custom Complex structures.
 */

typedef struct {
    double r; /** Real component */
    double i; /** Imaginary component */
} cpx_t;
typedef struct {
    float r;  /** Real component */
    float i;  /** Imaginary component */
} cpx_f_t;
void v_tan_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_asin_complex128(const cpx_t *src, cpx_t *res, int size);
void v_asin_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_acos_complex128(const cpx_t *src, cpx_t *res, int size);
void v_acos_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_atan_complex128(const cpx_t *src, cpx_t *res, int size);
void v_atan_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_atanh_complex128(const cpx_t *src, cpx_t *res, int size);
void v_atanh_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_hypot_complex128(const cpx_t *x1, const cpx_t *x2, double *res, int size);
void v_hypot_complex64(const cpx_f_t *x1, const cpx_f_t *x2, float *res, int size);
void v_pow_complex128(const cpx_t *x1, const cpx_t *x2, cpx_t *res, int size);
void v_pow_complex64(const cpx_f_t *x1, const cpx_f_t *x2, cpx_f_t *res, int size);
void v_conj_complex128(const cpx_t *src, cpx_t *res, int size);
void v_conj_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_square_double(const double *src, double *res, int size);
void v_square_float(const float *src, float *res, int size);
void v_square_int64(const int64_t *src, int64_t *res, int size);
void v_square_int32(const int32_t *src, int32_t *res, int size);
void v_square_complex128(const cpx_t *src, cpx_t *res, int size);
void v_square_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_pow_double(const double *x1, const double *x2, double *res, int size);
void v_pow_float(const float *x1, const float *x2, float *res, int size);
void v_floordiv_double(const double *x1, const double *x2, double *res, int size);
void v_floordiv_float(const float *x1, const float *x2, float *res, int size);
void v_floordiv_int64(const int64_t *x1, const int64_t *x2, int64_t *res, int size);
void v_floordiv_int32(const int32_t *x1, const int32_t *x2, int32_t *res, int size);
void v_remainder_double(const double *x1, const double *x2, double *res, int size);
void v_remainder_float(const float *x1, const float *x2, float *res, int size);
void v_remainder_int64(const int64_t *x1, const int64_t *x2, int64_t *res, int size);
void v_remainder_int32(const int32_t *x1, const int32_t *x2, int32_t *res, int size);
void v_isnan_double(const double *src, uint8_t *res, int size);
void v_isnan_float(const float *src, uint8_t *res, int size);
void v_isnan_complex128(const cpx_t *src, uint8_t *res, int size);
void v_isnan_complex64(const cpx_f_t *src, uint8_t *res, int size);
void v_isinf_double(const double *src, uint8_t *res, int size);
void v_isinf_float(const float *src, uint8_t *res, int size);
void v_isinf_complex128(const cpx_t *src, uint8_t *res, int size);
void v_isinf_complex64(const cpx_f_t *src, uint8_t *res, int size);
void v_isfinite_double(const double *src, uint8_t *res, int size);
void v_isfinite_float(const float *src, uint8_t *res, int size);
void v_isfinite_complex128(const cpx_t *src, uint8_t *res, int size);
void v_isfinite_complex64(const cpx_f_t *src, uint8_t *res, int size);
void v_copysign_double(const double *x1, const double *x2, double *res, int size);
void v_copysign_float(const float *x1, const float *x2, float *res, int size);
/* Vectorized Bitwise Universal Functions */
void v_bitwise_and_int32(const int32_t *a, const int32_t *b, int32_t *res, int size);
void v_bitwise_and_int64(const int64_t *a, const int64_t *b, int64_t *res, int size);
void v_bitwise_and_uint8(const uint8_t *a, const uint8_t *b, uint8_t *res, int size);
void v_bitwise_and_int16(const int16_t *a, const int16_t *b, int16_t *res, int size);
void v_bitwise_or_int32(const int32_t *a, const int32_t *b, int32_t *res, int size);
void v_bitwise_or_int64(const int64_t *a, const int64_t *b, int64_t *res, int size);