pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_tan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_asin_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_asin_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_acos_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_acos_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_atan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_atan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_atanh_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_atanh_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_hypot_complex128(
  ffi.Pointer<cpx_t> x1,
  ffi.Pointer<cpx_t> x2,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_hypot_complex64(
  ffi.Pointer<cpx_f_t> x1,
  ffi.Pointer<cpx_f_t> x2,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Int,
  )
>()
external void v_pow_complex128(
  ffi.Pointer<cpx_t> x1,
  ffi.Pointer<cpx_t> x2,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<cpx_f_t>,
    ffi.Int,
  )
>()
external void v_pow_complex64(
  ffi.Pointer<cpx_f_t> x1,
  ffi.Pointer<cpx_f_t> x2,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_conj_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_conj_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_square_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_square_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, ffi.Int)
>()
external void v_square_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>, ffi.Int)
>()
external void v_square_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_square_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_square_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_pow_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_pow_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_floordiv_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_floordiv_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_floordiv_int64(
  ffi.Pointer<ffi.Int64> x1,
  ffi.Pointer<ffi.Int64> x2,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_floordiv_int32(
  ffi.Pointer<ffi.Int32> x1,
  ffi.Pointer<ffi.Int32> x2,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_remainder_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_remainder_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_remainder_int64(
  ffi.Pointer<ffi.Int64> x1,
  ffi.Pointer<ffi.Int64> x2,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_remainder_int32(
  ffi.Pointer<ffi.Int32> x1,
  ffi.Pointer<ffi.Int32> x2,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isnan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isnan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isnan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isnan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isinf_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isinf_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isinf_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isinf_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isfinite_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isfinite_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isfinite_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_isfinite_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_copysign_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_copysign_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Float> res,
  int size,
);

/// Vectorized Bitwise Universal Functions
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_bitwise_and_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_bitwise_and_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
  )
>()
external void v_bitwise_and_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Int,
  )
>()
external void v_bitwise_and_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_bitwise_or_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_bitwise_or_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int64> res,
  int size,
);
